# vacancy_project

./: .coveragerc  .gitignore  CAPI.py  CV.py  HH.py  README.md  __init__.py  json_add_vac.py  main.py  new_vacancies.json  pyproject.toml  requirements.txt  setup.py  test_functionality.py  user_request.py
tests/: conftest.py  test_all.py  test_hh.py  test_json_operations.py  test_main.py  test_vacancy.py  test_vacancy_manager.py  tests_all.py
