[tool.poetry]
name = "vacancy-project"
version = "0.1.0"
description = "Job search application using HeadHunter API"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"